--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.0-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit",
+   "display_name": "Python 3.8.0 64-bit ('tf_gpu': conda)",
    "metadata": {
     "interpreter": {
-     "hash": "61af09b87da484877b726f38fc4da1ba879c2866288b4ba4d282097e7900c091"
+     "hash": "476994e1e32b3c97062228c12c317fe97f95b2b4ef7152b2a37686f25e56c46b"
     }
    }
   }
@@ -28,19 +28,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "21806it [00:01, 12234.76it/s]\n"
+      "21806it [00:01, 13629.78it/s]\n"
      ]
     }
    ],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,19 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occurences = [[x,list_of_labels.count(x)] for x in set(list_of_labels)]\n",
+    "sorted_occ = sorted(occurences,key=lambda l:l[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[['9|2|0', 10], ['9|16', 52], ['2|13', 66], ['16|14|13', 8], ['12|5|0', 9], ['13|7|13', 2], ['12|3', 4], ['12|7|0', 3], ['12|0|17', 4], ['1|2', 53], ['9|16|2|0', 2], ['5|3', 4], ['17|7', 1], ['17|3', 7], ['14|3', 29], ['12|13', 32], ['7|17', 1], ['12|7', 19], ['16|4|13', 22], ['16|4|0', 2], ['16|4|3|13', 2], ['13|2|0', 17], ['16|9|2|0', 4], ['12|17|16', 2], ['8|5', 12], ['10|14', 2], ['9|5', 12], ['0', 1551], ['5|1|2|13', 2], ['12|16|5', 7], ['13|16|0', 28], ['7|3|0', 9], ['9|2|13', 3], ['14|2|13', 18], ['16|8|0', 29], ['7|14|0', 4], ['12|10|11', 3], ['9|12|10', 1], ['9|10', 10], ['9|6', 1], ['1', 221], ['1|3|0', 5], ['13|2', 12], ['6|10|2', 2], ['6|4', 2], ['16|10|2', 8], ['9', 294], ['15|5|0', 6], ['12|16|14', 1], ['16|9', 47], ['6', 476], ['10|4', 16], ['15|14', 3], ['12|9', 12], ['12|14|0', 5], ['12|16|1|13', 2], ['7|4|2', 5], ['16|4|3', 5], ['10|2', 31], ['13|16|9|13', 3], ['1|0', 305], ['16|9|13', 18], ['7|1|4', 2], ['13|7|0', 3], ['12|0|13', 17], ['13|16|7|0', 1], ['16|13', 330], ['16|5|1', 5], ['9|7', 4], ['8|1', 6], ['15|16|7|13', 1], ['16|0', 1278], ['9|1|0|13', 1], ['11|0', 7], ['16|7|4', 7], ['12|1', 9], ['9|16|7', 2], ['7|10', 4], ['12|7|2', 3], ['16|5', 238], ['16|8|2|0', 17], ['16|1|0', 70], ['12|8|2', 1], ['16|0|13', 160], ['13|16|13', 7], ['15|0', 37], ['9|9|0|13', 3], ['5', 636], ['9|13|13', 4], ['6|2|0', 4], ['13|14|1', 1], ['9|9|0', 2], ['16', 906], ['17|4', 13], ['10|0|13', 4], ['12|7|10|13', 1], ['10|11|0', 4], ['15|16|0', 10], ['14|1|2|0', 1], ['4|2', 20], ['12|8|0', 12], ['9|5|0', 8], ['10|11|13', 4], ['13|9|7|0', 1], ['16|1|13', 14], ['12|16|7|0', 5], ['5|0', 383], ['2|17', 10], ['16|6', 61], ['17|13', 3], ['5|1', 14], ['4', 788], ['7|5', 36], ['9|16|3', 1], ['12|16|9', 6], ['6|17', 6], ['9|1|2|0', 2], ['7|2', 46], ['9|14|13', 1], ['16|2|13', 23], ['12|16|2|0', 4], ['13|16|2', 1], ['12|16', 188], ['12|5', 17], ['12|10|0', 2], ['16|6|3', 2], ['16|6|2', 31], ['17|16|0', 8], ['16|7|2|0', 3], ['8|2', 25], ['16|7|0|13', 6], ['9|17', 2], ['9|12', 8], ['1|2|13', 2], ['16|11', 14], ['12|16|0|13', 1], ['16|14|1|0', 1], ['16|8|3', 2], ['16|8|13', 8], ['3', 549], ['16|5|2', 14], ['12|2|0', 15], ['16|8|10', 3], ['12|5|1|0', 2], ['13|7|5', 1], ['9|12|4|3', 2], ['16|17', 12], ['9|4', 18], ['16|1', 85], ['16|10', 87], ['8|0|17', 1], ['13|7', 8], ['16|6|0', 13], ['16|9|0', 25], ['2', 515], ['15|0|13', 1], ['13|9|13', 2], ['8|13', 12], ['16|14|2', 10], ['16|2', 225], ['9|7|0', 15], ['13|12|16|0', 4], ['12', 561], ['5|2', 11], ['8|1|0', 8], ['7|1|0|13', 5], ['12|16|3|0', 2], ['13|8', 2], ['7', 719], ['14|13', 16], ['13|12|13', 1], ['13|4', 11], ['12|14|0|13', 6], ['15|4', 5], ['16|8|5', 1], ['16|5|0', 98], ['16|11|0', 17], ['12|16|13', 14], ['6|7', 18], ['16|4|2', 3], ['7|0', 481], ['9|12|16|0', 2], ['16|4|17', 1], ['16|2|0|13', 24], ['7|4|13', 3], ['8|3', 5], ['10|1', 2], ['13|16|9|4|13', 1], ['13|5|0', 3], ['15|13', 5], ['6|3', 17], ['17|3|0', 2], ['16|9|7|0', 4], ['17|2|0', 8], ['14|5|2|0', 1], ['6|0', 34], ['16|6|7', 2], ['16|8|2', 6], ['9|12|0', 2], ['9|14', 4], ['17|16', 31], ['1|3', 8], ['13|3', 2], ['13|12', 2], ['1|17', 3], ['16|10|13', 8], ['7|1|2|0', 6], ['17|0', 97], ['13|7|2', 1], ['14|1', 23], ['12|6', 9], ['8|14|13', 1], ['12|14|13', 2], ['5|2|0', 20], ['9|16|13', 21], ['9|5|0|17', 7], ['17|14', 1], ['4|0', 51], ['7|0|17', 1], ['13|0', 107], ['5|1|0', 7], ['1|2|0', 50], ['7|4', 19], ['13|14|2', 2], ['13|12|16', 5], ['7|4|3', 1], ['16|3|0', 76], ['16|7|1|0', 8], ['6|1', 21], ['16|5|3|0', 5], ['6|5|0', 1], ['9|6|13', 1], ['6|14', 3], ['14', 1054], ['11|13', 7], ['6|2', 23], ['12|10', 13], ['11', 1], ['12|16|8', 1], ['10|13', 13], ['15|12', 10], ['9|16|2', 5], ['7|3', 22], ['16|7', 88], ['12|2|13', 6], ['14|11|0', 2], ['13|10', 2], ['0|13', 469], ['8|5|0', 9], ['12|8|4', 2], ['16|14|5|3|0', 2], ['5|0|13', 29], ['12|4|13', 8], ['16|14|2|0', 1], ['16|3|13', 7], ['14|0', 378], ['13|1|0', 2], ['15', 82], ['16|6|0|13', 3], ['9|7|13', 1], ['12|2|0|13', 5], ['16|9|3|0', 2], ['6|5', 6], ['13|16|3|13', 2], ['6|13', 25], ['2|0', 596], ['7|5|0', 24], ['14|4', 34], ['9|13', 91], ['16|2|0', 157], ['16|3', 98], ['15|16', 35], ['5|0|17', 1], ['16|7|10|5', 1], ['15|2|0', 7], ['16|7|2|13', 2], ['8|2|0', 15], ['9|13|16|0', 1], ['16|7|2', 10], ['10|11', 10], ['12|8', 7], ['7|8|10', 3], ['5|1|13', 6], ['14|3|0', 14], ['16|6|2|0', 1], ['7|8', 2], ['1|13', 15], ['9|9|13', 2], ['9|12|16', 4], ['12|3|0', 10], ['16|1|2', 8], ['16|14', 91], ['17|17', 28], ['13|16|7', 3], ['12|7|3|0', 1], ['9|9', 6], ['16|6|13', 4], ['4|0|13', 5], ['13|4|13', 9], ['15|13|0', 2], ['7|1', 9], ['5|1|0|13', 1], ['16|9|0|13', 2], ['12|16|3', 2], ['18', 34], ['9|14|0', 11], ['5|4|0', 5], ['12|9|0', 5], ['9|0|13', 26], ['12|16|2', 2], ['13|16', 28], ['17', 274], ['16|7|0', 87], ['15|16|13', 2], ['16|7|5', 3], ['16|0|17', 6], ['8|10|13', 1], ['14|2', 78], ['16|4', 211], ['15|5', 23], ['7|5|1', 6], ['16|5|0|13', 4], ['12|16|1|0', 1], ['5|4', 5], ['13|12|0', 7], ['9|5|13', 1], ['17|5', 2], ['13|14', 6], ['16|14|0', 36], ['4|13', 73], ['16|7|3', 1], ['17|0|13', 2], ['10|3|0', 10], ['16|1|4', 4], ['14|5', 22], ['16|6|5|2', 1], ['16|5|1|0', 1], ['15|3', 3], ['12|14', 30], ['8|14', 1], ['13|13', 62], ['5|13', 33], ['10|5', 12], ['9|1|13', 5], ['12|11', 6], ['9|8|13', 1], ['7|2|0', 54], ['2|3|0', 3], ['8|0', 136], ['16|5|13', 12], ['4|3', 4], ['1|4', 25], ['12|0', 414], ['16|17|14', 1], ['3|13', 12], ['14|1|0', 10], ['12|4', 11], ['17|3|0|13', 1], ['10|1|0', 2], ['12|2', 25], ['14|5|0', 11], ['16|8', 59], ['3|17', 2], ['0|17', 16], ['1|0|13', 13], ['13', 818], ['9|16|4', 3], ['10', 404], ['16|6|3|0', 5], ['10|0', 103], ['17|4|2', 1], ['15|7', 1], ['9|16|8', 1], ['13|14|0', 6], ['13|10|11', 1], ['10|17', 2], ['8|4', 11], ['9|3', 7], ['8', 529], ['10|2|0', 15], ['17|14|0', 14], ['16|1|2|13', 2], ['16|17|13', 2], ['16|14|3', 4], ['14|2|0', 45], ['9|0', 130], ['16|7|1|2', 1], ['9|14|0|13', 1], ['7|2|0|13', 2], ['15|8', 16], ['2|0|13', 38], ['3|0', 286], ['17|5|3|0', 2], ['9|14|2', 2], ['8|3|0', 7], ['12|1|0', 13], ['17|16|13', 8], ['9|16|0', 25], ['9|2', 4], ['15|2', 2], ['13|5', 5], ['12|16|0', 135], ['8|4|0', 2], ['9|8|14', 1], ['9|1', 1], ['9|8', 9], ['0|13|17', 10], ['12|6|0', 1], ['12|16|1', 1], ['15|12|14|0', 1], ['7|13', 28], ['9|1|0', 12], ['7|14', 3], ['16|9|4', 1], ['1|3|0|13', 3], ['13|0|13', 12], ['14|0|13', 9], ['12|1|2', 2], ['7|0|13', 20], ['6|9', 2], ['9|5|2', 1], ['9|4|13', 8], ['10|3', 9], ['16|14|5', 2], ['9|16|0|13', 9], ['7|1|0', 5], ['12|16|4', 4], ['3|0|13', 4], ['13|1', 3], ['16|7|13', 8], ['16|10|0', 25], ['11|5', 2]]\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "bar() missing 1 required positional argument: 'height'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ad76e8e49bb6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: bar() missing 1 required positional argument: 'height'"
      ]
     }
    ],
    "source": [
-    "occurences = [[x,list_of_labels.count(x)] for x in set(list_of_labels)]"
+    "plt.bar(sorted)"
    ]
   },
   {
