--- a/notebooks/create_single_label_csv.ipynb
+++ b/notebooks/create_single_label_csv.ipynb
@@ -28,16 +28,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,45 +74,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_labels_with_colors = []\n",
+    "colors = [\"blue\", \"green\", \"red\", \"yellow\"]\n",
+    "\n",
+    "for label in new_labels:\n",
+    "    anno_class = label[1]\n",
+    "    img_name = label[0]\n",
+    "    for color in colors:\n",
+    "        img_name_color = img_name + '_' + color\n",
+    "        new_label = [img_name_color, anno_class]\n",
+    "        new_labels_with_colors.append(new_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "35869\n"
+      "143476\n['5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_blue', '8']\n"
      ]
     }
    ],
    "source": [
-    "print(len(new_labels))"
+    "print(len(new_labels_with_colors))\n",
+    "print(new_labels_with_colors[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'to_frame'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-e24604058343>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'../data/train_single.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\tf_gpu\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3373\u001b[0m         ...           compression=compression_opts)  # doctest: +SKIP\n\u001b[0;32m   3374\u001b[0m         \"\"\"\n\u001b[1;32m-> 3375\u001b[1;33m         \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mABCDataFrame\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3376\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3377\u001b[0m         formatter = DataFrameFormatter(\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'to_frame'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                                             0  1\n0    5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_blue  8\n1   5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_green  8\n2     5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_red  8\n3  5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_yellow  8\n4    5c27f04c-bb99-11e8-b2b9-ac1f6b6435d0_blue  5\n"
      ]
     }
    ],
    "source": [
-    "pd.DataFrame.to_csv(new_labels, '../data/train_single.csv')\n",
-    "\n",
-    "with open(\"../data/train_single.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows()"
+    "new_labels_with_colors = pd.DataFrame(new_labels_with_colors, index=False)\n",
+    "print(new_labels_with_colors.head())\n",
+    "#pd.DataFrame.to_csv(new_labels_with_colors, '../data/train_single.csv')"
    ]
   },
   {
